# biometal

./: .gitignore  BAM_WRITER_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CRAM_NEON_PHASE3_RESULTS.md  CRAM_REAL_WORLD_TESTING.md  Cargo.toml  FORMAT_COVERAGE_STATUS.md  GPU_ML_ANALYSIS.md  HONEST_CAPABILITY_AUDIT.md  KNOWN_ISSUES.md  NATIVE_CRAM_IMPLEMENTATION_PLAN.md  PERFORMANCE_BENCHMARK_RESULTS.md  PLANNING_INDEX.md  PROJECT_TODOS.md  PROPERTY_BASED_TESTING.md  README.md  REAL_WORLD_DATA_TESTING.md  REPOSITORY_SIZE_INVESTIGATION.md  RULE2_INVESTIGATION_FINDINGS.md  SESSION_SUMMARY_NOV10_CONTINUED.md  SESSION_SUMMARY_NOV11_RULE2.md  STRATEGIC_PIVOT_PLAN.md  STRATEGIC_TECHNICAL_ROADMAP.md  WEEK3_SUMMARY.md  pyproject.toml  quality_model.onnx  test_cli.sh  test_threshold_logic.rs
research/caf-format/implementation/: BLOCK_BUILDER_SUMMARY.md  CAF_FINAL_REPORT.md  CODE_REVIEW.md  COMPRESSION_FIX.md  Cargo.toml  DICTIONARY_COMPRESSION_SUMMARY.md  INTEGRATION_TEST_RESULTS.md  INTEGRATION_TEST_RESULTS_20251110_222946.md  NEON_IMPLEMENTATION_SUMMARY.md  NEON_OPTIMIZATION_ANALYSIS.md  PROGRESS_REVIEW.md  README.md  SESSION_NOTES.md  SPECIFICATION.md  STREAMING_ANALYTICS_EVALUATION.md  STREAMING_ANALYTICS_FINDINGS.md  WEEK1_SUMMARY.md  WEEK2_PROGRESS.md  WEEK3_PROGRESS.md  WEEK4_COMPLETION_SUMMARY.md  integration_test.sh
research/caf-format/implementation/benches/: caf_neon_operations.rs  caf_vs_bam.rs  neon_operations.rs  streaming_analytics_validation.rs
research/caf-format/implementation/examples/: analyze_caf_compression.rs  analyze_caf_simple.rs  bam_to_caf.rs  bincode_overhead_test.rs  caf_info.rs  caf_to_sam.rs  test_compression_ratios.rs  test_header_size.rs
research/caf-format/implementation/src/: error.rs  lib.rs  types.rs
research/caf-format/implementation/src/block/: builder.rs  mod.rs  reader.rs
research/caf-format/implementation/src/column/: mod.rs
research/caf-format/implementation/tests/: integration_test.rs
(+287 files in other folders)
