[package]
name = "caf"
version = "0.1.0"
edition = "2021"
authors = ["Scott Handley"]
license = "MIT"
description = "Columnar Alignment Format (CAF) - ARM-native bioinformatics format"
repository = "https://github.com/scotthandley/biometal"
readme = "README.md"
keywords = ["bioinformatics", "genomics", "alignment", "arm", "neon"]
categories = ["science", "compression"]

[lib]
name = "caf"
path = "src/lib.rs"

# TODO: Uncomment when CLI tools are implemented
# [[bin]]
# name = "caf-convert"
# path = "src/bin/convert.rs"
#
# [[bin]]
# name = "caf-query"
# path = "src/bin/query.rs"
#
# [[bin]]
# name = "caf-stats"
# path = "src/bin/stats.rs"

[dependencies]
# Compression
zstd = "0.13"
lz4 = "1.24"

# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Checksums
crc32fast = "1.3"

# Logging
log = "0.4"
env_logger = "0.11"

# CLI
clap = { version = "4.4", features = ["derive"] }

# BAM integration (from main biometal)
biometal = { path = "../../../" }

# Optional: NEON intrinsics (ARM only)
[target.'cfg(target_arch = "aarch64")'.dependencies]
# NEON intrinsics available via std::arch

[dev-dependencies]
# Testing
proptest = "1.4"
quickcheck = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
rand = "0.8"

# Benchmarking
csv = "1.3"

[[bench]]
name = "caf_vs_bam"
harness = false

[[bench]]
name = "neon_operations"
harness = false

[[bench]]
name = "caf_neon_operations"
harness = false

[[bench]]
name = "streaming_analytics_validation"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"

[features]
default = []
neon = []  # Enable ARM NEON optimizations (auto-enabled on aarch64)
parallel = []  # Enable parallel block decompression
